--- a/example/ios/Runner/Info.plist
+++ b/example/ios/Runner/Info.plist
@@ -41,5 +41,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSCameraUsageDescription</key>
+	<string>For Chat Room</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>For Chat Room</string>
+
 </dict>
 </plist>
