--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   flutter:
     sdk: flutter
-  flutter_webrtc: ^0.6.10+hotfix.1
+  flutter_webrtc: ^0.7.1
   path_provider: ^2.0.5
   http: ^0.13.4
   web_socket_channel: ^2.1.0
